# conan-osip

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
.ci/: install.sh
.travis/: install.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
test_package/src/: test_osip.c
